--- a/kernel-5.10/arch/arm64/configs/flip_defconfig
+++ b/kernel-5.10/arch/arm64/configs/flip_defconfig
@@ -2125,6 +2125,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_PWM_BEEPER is not set
 # CONFIG_INPUT_PWM_VIBRA is not set
 CONFIG_INPUT_RK805_PWRKEY=y
+CONFIG_RK_TIMED_GPIO=y
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_ADXL34X is not set
 # CONFIG_INPUT_IMS_PCU is not set
