Ensure bluetooth allows device to sleep

--- a/kernel-5.10/arch/arm64/configs/flip_defconfig
+++ b/kernel-5.10/arch/arm64/configs/flip_defconfig
@@ -5606,15 +5606,15 @@ CONFIG_PM_OPP=y
 # CONFIG_INTERCONNECT is not set
 # CONFIG_COUNTER is not set
 # CONFIG_MOST is not set
-#CONFIG_RK_FLASH=y
+CONFIG_RK_FLASH=y
 CONFIG_RK_NAND=y
-#CONFIG_RK_SFTL=y
-#CONFIG_RK_NANDC_NAND=y
-#CONFIG_RK_SFC_NAND=y
-#CONFIG_RK_SFC_NAND_MTD=y
-#CONFIG_RK_SFC_NOR=y
-#CONFIG_RK_SFC_NOR_MTD=y
-#CONFIG_MTD_SPI_NAND=y
+CONFIG_RK_SFTL=y
+CONFIG_RK_NANDC_NAND=y
+CONFIG_RK_SFC_NAND=y
+CONFIG_RK_SFC_NAND_MTD=y
+CONFIG_RK_SFC_NOR=y
+CONFIG_RK_SFC_NOR_MTD=y
+CONFIG_MTD_SPI_NAND=y
 
 #
 # Headset device support
